fixed admin and tab bar. Fixed top-index visibility

--- a/sass/layouts/_base.scss
+++ b/sass/layouts/_base.scss
@@ -1,3 +1,7 @@
+body {
+  @extend %clearfix;
+}
+
 @media (min-width: $bp4) {
   .l-main, .l-header {
     max-width: 63.25em;
